unpackaged/main/default/objects/LoanPaymentTransaction__x/LoanPaymentTransaction__x.object-meta.xml
<CustomObject>
    <description>LoanPaymentTransaction</description>
    <externalDataSource>LeasePlus</externalDataSource>
    <externalName>LoanPaymentTransaction</externalName>
    <label>LoanPaymentTransaction</label>
    <pluralLabel>LoanPaymentTransaction</pluralLabel>
</CustomObject>