unpackaged/main/default/objects/LoanPaymentTransaction__x/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <description>CustomerNumber</description>
    <externalDeveloperName>CustomerNumber</externalDeveloperName>
    <label>CustomerNumber</label>
    <length>128</length>
    <type>Text</type>
</CustomField>