unpackaged/main/default/objects/LoanPaymentTransaction__x/fields/PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentAmount__c</fullName>
    <description>PaymentAmount</description>
    <externalDeveloperName>PaymentAmount</externalDeveloperName>
    <label>PaymentAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>