unpackaged/main/default/objects/LoanPaymentTransaction__x/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <description>PaymentDate</description>
    <externalDeveloperName>PaymentDate</externalDeveloperName>
    <label>PaymentDate</label>
    <type>Date</type>
</CustomField>