unpackaged/main/default/objects/LoanPaymentTransaction__x/fields/PrincipalAmount__c.field-meta.xml
<CustomField>
    <fullName>PrincipalAmount__c</fullName>
    <description>PrincipalAmount</description>
    <externalDeveloperName>PrincipalAmount</externalDeveloperName>
    <label>PrincipalAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>